<resources>
    <string name="app_name">MkopaAPP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">Account Number</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_blanks">---</string>


<!--*********** APP MENU-->
    <string name="menu_home">Home</string>
    <string name="menu_account">My Account</string>
    <string name="menu_offers">Products</string>
    <string name="menu_pay">Make Payment</string>
    <string name="menu_how_to">How to Guides</string>
    <string name="menu_products">Products</string>
    <string name="menu_chat">Chat with Us</string>
    <string name="menu_langs">Change Language</string>
    <string name="menu_appsettings">App Settings</string>
    <string name="menu_contactus">Contact Us</string>
    <string name="menu_servcenters">Service Locator</string>

    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_next">Next</string>
    <string name="btn_payNow">Pay Now</string>
    <string name="btn_done">Done</string>
    <string name="btn_showstores">Show M-KOPA SHOPS</string>
    <string name="btn_howtoaction">Go to action</string>


<!--*********** LANGUAGES-->
    <string name="langs_welcome">Choose your preferred language</string>
    <string name="langs_prompt">English</string>
    <string-array name="languages">
        <item>English</item>
        <item>Swahili</item>
        <item>Akan(GHA)</item>
        <item>Pidgin(NGA)</item>
        <item>Bemba(ZAM)</item>
    </string-array>

<!--*********** CONTACTS & CHAT-->
    <string name="contacts_welcome">Get in touch with us, through any of the options below…</string>
    <string name="contacts_backbtn">Back to Home</string>
    <string name="chatnow_prompt">Chat Now within M-KOPA app</string>
    <string name="chatwhatapp_prompt">Chat through Whatsapp</string>
    <string name="chatcall_prompt">Call us now</string>
    <string name="contacts_phonenum">+254799136761</string>
    <string name="chatemail_prompt">Send us an email</string>
    <string name="contacts_email">customercare@mkopa.com</string>
    <string name="contacts_emailsubject">CustomerCare Ticket #</string>

<!--*********** PRODUCTS-->
    <string name="products_title">OUR LATEST PHONES…</string>
    <string name="products_desc">Get instant access a high quality smartphone after making an initial deposit and paying for it in easy and flexible instalments</string>
    <string name="phone1_name">Samsung A23s</string>
    <string name="phone2_name">Nduthi Electric</string>
    <string name="phone3_name">Jikokoa Meko</string>
    <string name="phone1_price">KSH 12,999</string>
    <string name="phone1_depo">KSH 2,999</string>
    <string name="phone1_dailyinst">KSH 100</string>
    <string name="phone1_weeklyinst">KSH 700</string>
    <string name="phone1_monthlyinst">KSH 2,100</string>
    <string name="phone2_price">KSH 189,999</string>
    <string name="phone2_depo">KSH 39,999</string>
    <string name="phone2_dailyinst">KSH 400</string>
    <string name="phone2_weeklyinst">KSH 2,800</string>
    <string name="phone2_monthlyinst">KSH 11,200</string>
    <string name="phone3_price">KSH 4,999</string>
    <string name="phone3_depo">KSH 1,999</string>
    <string name="phone3_dailyinst">KSH 90</string>
    <string name="phone3_weeklyinst">KSH 630</string>
    <string name="phone3_monthlyinst">KSH 100</string>
    <string name="phone1_details_short">Quad Core 7.0GHZ | Memory: 4GB RAM + 64GB| 20MP Rear Camera, 8MP Front Camera | Battery: 5000mAh</string>

    <string name="phone1_details">MM Bruno G50 | Octa Core 7.0GHZ | Display: 6.53" HD+ Dot Drop | Memory: 4GB RAM + 64GB| 20MP Rear Camera, 8MP Front Camera | Battery: 15000mAh

Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et arcu non dolor egestas interdum sit amet at ipsum.</string>

    <string name="phone2_details_short">Octa Core 2.0GHZ | Memory: 3GB RAM + 64GB| 13MP Rear Camera, 5MP Front Camera | Battery: 5000mAh</string>

    <string name="phone2_details">Mediatek Helio G25 | Octa Core 2.0GHZ | Display: 6.53" HD+ Dot Drop | Memory: 3GB RAM + 64GB| 13MP Rear Camera, 5MP Front Camera | Battery: 5000mAh

Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et arcu non dolor egestas interdum sit amet at ipsum.</string>

    <string name="phone3_details_short">Hexa Core 5.0GHZ | Memory: 8GB RAM + 128GB| 24MP Rear Camera, 15MP Front Camera | Battery: 12000mAh</string>

    <string name="phone3_details">Mediatek Helio A66 | Kexa Core 5.0GHZ | Display: 6.53" HD+ Dot Drop | Memory: 8GB RAM + 128GB| 24MP Rear Camera, 15MP Front Camera | Battery: 12000mAh

Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et arcu non dolor egestas interdum sit amet at ipsum.</string>


    <string name="interest_Button">I\'M INTERESTED…</string>
    <string name="details_title">Details</string>
<!--*********** PAYMENTS-->
    <string name="payments_choosedevice">Choose the device to pay for</string>
    <string name="payments_confirmdetails">Confirm your payment details</string>
    <string name="payments_confirmnum">Confirm the phone number to bill</string>
    <string name="payments_confirmamnt">Enter amount to pay</string>
    <string name="payments_confirmnum_def">+254 *** ******</string>
    <string name="payments_confirmamnt_def">100</string>
    <string name="pay_waiting">Your payment is being processed. You will get a pop-up with instructions to complete the payment.
        Once complete click Done to exit to the homescreen and refresh your account details.</string>


<!--*********** ITEMS-->
    <string name="item_details">DETAILS</string>
    <string name="item_deposit_title">INITIAL DEPOSIT:</string>
    <string name="item_dailypay_title">DAILY \nPAYMENTS</string>
    <string name="item_weeklypay_title">WEEKLY \nPAYMENTS</string>
    <string name="item_monthlypay_title">MONTHLY \nPAYMENTS</string>
    <string name="item_deposit">3,000</string>
    <string name="item_dailypay">100</string>
    <string name="item_weeklypay">700</string>
    <string name="item_monthlypay">2,100</string>
    <string name="item_perday_title">per day</string>



    <!--*********** MY ACCOUNT-->
    <string name="account_welcome">Welcome mzae</string>
    <string name="account_user">User Name</string>
    <string name="progress_totals">PAYMENTS PROGRESS:</string>
    <string name="account_devices">DEVICES</string>
    <string name="account_totalbaltitle">TOTAL BALANCE</string>
    <string name="account_totalbal">12,000</string>
    <string name="account_totaldevicestitle">TOTAL DEVICES</string>
    <string name="account_totaldevices">3</string>
    <string name="account_deadlinetitle">DUE IN…</string>
    <string name="account_deadline">6d:15h:20m</string>
    <string name="account_numbertitle">ACCOUNT NUMBER:</string>
    <string name="account_number">xxxxxxxx</string>
    <string name="account_membertitle">MEMBER SINCE:</string>
    <string name="account_memberdate">11-Aug-2020</string>
    <string name="account_lastamounttitle">LAST AMOUNT</string>
    <string name="account_lastamount">KSH 100</string>
    <string name="account_lastpaytitle">LAST PAYMENT</string>
    <string name="account_nextpaytitle">NEXT PAYMENT.:</string>
    <string name="account_lastpaydate">12-Jun-2021</string>

    <string name="account_productname">SAMSUNG A30 core</string>
    <string name="account_productbalancetitle">BALANCE</string>
    <string name="account_productcosttitle">LOAN AMOUNT</string>
    <string name="account_productprogresstitle">PROGRESS</string>
    <string name="account_productcost">KSH 12,000</string>
    <string name="account_productbalance">KSH 7,800</string>
    <string name="account_productinstallments">KSH 100</string>
    <string name="account_productnextpayin">6d:15h</string>
    <string name="account_productlastpay">12-Jun-2021</string>
    <string name="account_paystatus_title">STATUS</string>
    <string name="account_paystatus_active">ACTIVE</string>
    <string name="account_paystatus_locked">LOCKED</string>
    <string name="account_paystatus_paid">PAID</string>
    <string name="account_paystatus_owned">OWNED</string>



<!--*********** HOW TO-->
    <string name="howto_title">What would you like to learn?</string>
    <string name="howto_searchbar">Start typing to search</string>
    <string name="guide1_title">How to make a payment through the M-KOPA app</string>
    <string name="guide2_title">How to check your M-KOPA balance</string>
    <string name="guide3_title">How to unlock your NOKIA device</string>
    <string name="guide4_title">How to make a payment through M-PESA</string>
    <string name="guide5_title">How to turn on internet on your device</string>
    <string name="guide6_title">Show nearest shop/agent</string>
    <string name="guide7_title">Show M-KOPA Warranty Policy</string>
    <string name="guide8_title">Show M-KOPA Return Policy</string>

    <string name="guide15_title">How to enjoy M-KOPA services, bila hustle</string>


<!--*********** SETTINGS-->
    <string name="settings_welcome">Customize mavitu</string>

<!--*********** SERVICE CENTERS-->
    <string name="servcenters_welcome">Select your country</string>
    <string name="servcenters_prompt">Uganda</string>
    <string-array name="servcenters">
        <item>Kenya</item>
        <item>Uganda</item>
        <item>Ghana</item>
        <item>Nigeria</item>
        <item>Zambia</item>
    </string-array>
    <string name="servcenters_linkuganda">https://www.google.com/maps/d/u/0/viewer?ll=1.6142004801616925%2C32.561120473125&amp;z=7&amp;mid=1XDmaQXIBF5qfOtZAZ8d2ripAVA8bZ1yX</string>





    <string name="home_title">Welcome</string>



</resources>