<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@drawable/light_bg"
    android:weightSum="4">

    <TextView


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="32dp"
        android:paddingVertical="15dp"
        android:text="@string/payments_confirmdetails"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/purple_500"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="2"

        android:paddingHorizontal="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/payments_productimage"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="5dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/phone_3"

            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="5dp"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/payments_productname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_productname"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"


                />
            <TextView
                android:id="@+id/payments_productstatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/yellow"
                android:paddingHorizontal="5dp"


                android:text="@string/account_paystatus_active"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="4dp"
                android:layout_gravity="center_vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_productprogresstitle"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    />

                <ProgressBar
                    android:id="@+id/payments_productprogress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:scaleY="2"
                    android:progressTint="@color/purple_500"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    />

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:layout_margin="10dp"
        app:cardElevation="1dp"


        android:backgroundTint="@color/light_grey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/payments_confirmnum"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/purple_500"/>

            <EditText
                android:id="@+id/payments_phonefield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:hint="@string/payments_confirmnum_def" />

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/payments_confirmamnt"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/purple_500"/>

            <EditText
                android:id="@+id/payments_amntfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:hint="@string/payments_confirmamnt_def"/>

            <Button
                android:id="@+id/payments_payButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_payNow"
                android:padding="20dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="30dp"
                android:backgroundTint="@color/purple_500"
                android:textColor="@color/white"
                />
        </LinearLayout>





    </androidx.cardview.widget.CardView>








</LinearLayout>


