<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@drawable/light_bg"
    android:weightSum="4">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="2"

        android:paddingHorizontal="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/item_image"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:src="@drawable/phone_3"
            android:layout_gravity="center_vertical"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">
        <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_productname"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"

                />
            <TextView
                android:id="@+id/item_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_productcost"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"

                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/bg_white"
                android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_deposit_title"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"

                    />
                <TextView
                    android:id="@+id/item_deposit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_deposit"
                    android:textColor="@color/white"
                    android:background="@color/purple_500"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:padding="2dp"
                    android:layout_marginStart="5dp"

                    />
            </LinearLayout>

        </LinearLayout>



    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"


        android:backgroundTint="@color/light_grey">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:paddingVertical="10dp">



            <androidx.cardview.widget.CardView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/bg_white"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/item_dailypay_title"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    android:textAlignment="center"
                    android:textStyle="bold"

                    />
                <TextView
                    android:id="@+id/item_dailypay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/item_dailypay"
                    android:textColor="@color/purple_500"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textAlignment="center"

                    />
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/purple_500"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/item_weeklypay_title"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/item_weeklypay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/item_weeklypay"
                    android:textColor="@color/purple_500"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textAlignment="center"

                    />
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/purple_500"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/item_monthlypay_title"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    android:textAlignment="center"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/item_monthlypay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/item_monthlypay"
                    android:textAlignment="center"
                    android:textColor="@color/purple_500"
                    android:textSize="14sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>



        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"


        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_details"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/purple_500"
            android:textAlignment="center"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/item_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone1_details"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:layout_marginHorizontal="12dp"/>







    </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/item_interestButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/interest_Button"
        android:textColor="@color/black"
        android:textStyle="bold"
        />


</LinearLayout>


